Replaces Files.write with Files.writeString when possible.